--- a/index.html
+++ b/index.html
@@ -223,8 +223,9 @@
 <div class="newsletter" >
   <h2>Newsletter</h2>
   <label>Over 25000 peoples have subscribed</label><br>
-  <input type="email" placeholder="Enter your email">
-  <input type="submit" value="Subscribe">
+  <div class="boitenews" >
+  <input type="email" placeholder="Enter your email"   >
+  <input type="submit" value="Subscribe"></div>
   <p class="send">we don't send your email and spam</p>
 </div>
 </div>
